# ml-rl-dllm

./: README.md  log_eda_diff.py  pyproject.toml  run_train.sh  run_train_dbl256.sh  run_train_dbl32.sh  run_train_lbl256.sh  run_train_safe.sh  run_train_sweep.sh  run_train_sweep_diff.sh  submit_sweep.sh  submit_sweep_diff.sh
common/: config.py  memory.py  run_state.py
docs/: cluster_resume_changes.md
eval/: aggregate_results.py  eval.py  pipeline.py
logs/: llada_diff_sweep_gbs128_bs16_ng2_3520061.out  llada_diff_sweep_gbs128_bs16_ng2_3520695.err  llada_diff_sweep_gbs128_bs16_ng4_3520062.out  llada_diff_sweep_gbs128_bs16_ng4_3520696.err  llada_diff_sweep_gbs128_bs16_ng8_3520697.err  llada_diff_sweep_gbs128_bs2_ng2_3520055.err  llada_diff_sweep_gbs128_bs2_ng2_3520689.err  llada_diff_sweep_gbs128_bs32_ng2_3520064.out  llada_diff_sweep_gbs128_bs32_ng2_3520698.err  llada_diff_sweep_gbs128_bs32_ng4_3520065.err  llada_diff_sweep_gbs128_bs32_ng4_3520065.out  llada_diff_sweep_gbs128_bs32_ng4_3520699.err  llada_diff_sweep_gbs128_bs32_ng8_3520700.err  llada_diff_sweep_gbs128_bs4_ng2_3520690.err  llada_diff_sweep_gbs128_bs4_ng4_3520691.err  llada_diff_sweep_gbs128_bs8_ng2_3520058.err  llada_diff_sweep_gbs128_bs8_ng2_3520692.err  llada_diff_sweep_gbs128_bs8_ng4_3520693.err  llada_diff_sweep_gbs128_bs8_ng8_3520060.err  llada_diff_sweep_gbs128_bs8_ng8_3520694.err  llada_diff_sweep_gbs16_bs16_ng2_3520028.err  llada_diff_sweep_gbs16_bs16_ng8_3520030.err  llada_diff_sweep_gbs16_bs4_ng4_3520024.err  llada_diff_sweep_gbs16_bs8_ng8_3520027.err  llada_diff_sweep_gbs4_bs4_ng2_3520014.out  (+87 more)
(+241 files in other folders)
